# katas-python

./: .gitignore  README.md  ROADMAP-KATAS-PYTHON.md  pyproject.toml
bloques/bloque-01-led-toggle/kp01_variables_y_tipos/: README.md  solucion.py  test_solucion.py
bloques/bloque-01-led-toggle/kp02_condicionales/: README.md  solucion.py  test_solucion.py
bloques/bloque-01-led-toggle/kp03_funciones/: README.md  solucion.py  test_solucion.py
bloques/bloque-01-led-toggle/kp04_strings_y_metodos/: README.md  solucion.py  test_solucion.py
